Another test commit

--- a/BlazorMovies/Client/Shared/MainLayout.razor
+++ b/BlazorMovies/Client/Shared/MainLayout.razor
@@ -24,6 +24,7 @@
         public string Color { get; set; } = "red";
         public string Size { get; set; } = "12px";
         public string SizeTwo { get; set; } = "20px";
+        public string ColorTwo { get; set; } = "blue";
     }
 
 }
