--- a/BlazorMovies/Client/Shared/IndividualMovie.razor
+++ b/BlazorMovies/Client/Shared/IndividualMovie.razor
@@ -1,16 +1,17 @@
-﻿<div>
-    <p> Title: @Movie.Title</p>
-    <p> Release: <b>@Movie.ReleaseDate.ToString("dd MMM yyyy")</b></p>
+﻿<div class="individual-movie-container">
+    <a>
+        <img src="@Movie.Poster" alt="Poster" class="movie-poster" />
+    </a>
+    <p>@Movie.TitleBrief</p>
     <div>
-        @if (DisplayButtons)
-        {
-            <button @onclick="@(() => DeleteMovie.InvokeAsync(Movie))">Delete</button>
-        }
+        <a class="btn btn-info">Edit</a>
+        <button type="button" class="btn btn-danger" @onclick="@(() => DeleteMovie.InvokeAsync(Movie))">
+            Delete
+        </button>
     </div>
 </div>
 
 @code{
     [Parameter] public Movie Movie { get; set; }
-    [Parameter] public bool DisplayButtons { get; set; } = false;
-    [Parameter] public EventCallback<Movie> DeleteMovie { get; set; }    
+    [Parameter] public EventCallback<Movie> DeleteMovie { get; set; }
 }
