--- a/BlazorMovies/Client/Shared/MoviesList.razor
+++ b/BlazorMovies/Client/Shared/MoviesList.razor
@@ -1,70 +1,33 @@
 ﻿@inject IJSRuntime js
 
-<input type="checkbox" @bind="displayButtons" />
+    <div class="movies-container">
+        <GenericList List="Movies">
+            <ElementTemplate Context="movie">
+                <IndividualMovie Movie="movie" DeleteMovie="DeleteMovie" />
+            </ElementTemplate>
+        </GenericList>
+    </div>
 
-<GenericList List="Movies">
-    <ElementTemplate Context="movie">
-        <IndividualMovie Movie="movie" DisplayButtons="displayButtons" DeleteMovie="DeleteMovie" />
-    </ElementTemplate>
-</GenericList>
 
-<Confirmation @ref="confirmation" onCancel="onCancel" onConfirm="onConfirm">
-    <div>Do you wish to delete @movieToBeDeleted.Title?</div>
-    </Confirmation>
 
-@code {
-    Confirmation confirmation;
+
+
+
+@code {    
     [Parameter] public List<Movie> Movies { get; set; }
-
-    bool displayButtons = true;
-
-    Movie movieToBeDeleted;
 
     private async Task DeleteMovie(Movie movie)
     {
-        movieToBeDeleted = movie;
-        confirmation.Show();
-        //await js.MyFunction("custom message");
+        await js.MyFunction("custom message");
 
-        //var confirmed = await js.Confirm($"Are you sure you want to delete {movie.Title}");
+        var confirmed = await js.Confirm($"Are you sure you want to delete {movie.Title}");
 
-        //if (confirmed)
-        //{
-        //    Movies.Remove(movie);
-        //}
-    }
-
-    void onConfirm()
-    {
-        Movies.Remove(movieToBeDeleted);
-        confirmation.Hide();
-        movieToBeDeleted = null;
-    }
-
-    void onCancel()
-    {
-        confirmation.Hide();
-        movieToBeDeleted = null;
-    }
-
-    protected override void OnInitialized()
-    {
-        Console.WriteLine("OnInitialized. Movies.Count = " + Movies.Count.ToString());
-    }
-
-    protected override void OnParametersSet()
-    {
-        Console.WriteLine("OnParametersSet. Movies.Count = " + Movies.Count.ToString());
-    }
-
-    protected override void OnAfterRender(bool firstRender)
-    {
-        Console.WriteLine("OnAfterRender. First Render = " + firstRender.ToString());
-    }
-
-    protected override bool ShouldRender()
-    {
-        return true;
+        if (confirmed)
+        {
+            Movies.Remove(movie);
+        }
     }
 }
+
+
 
