Compnent for markdown

--- a/BlazorMovies/Client/Pages/People/EditPerson.razor
+++ b/BlazorMovies/Client/Pages/People/EditPerson.razor
@@ -2,6 +2,23 @@
 
 <h3>EditPerson</h3>
 
+@if (Person != null)
+{
+     <PersonForm Person="Person" OnValidSubmit="Edit" />
+}
+
 @code {
     [Parameter] public int PersonId { get; set; }
+
+    Person Person;
+
+    protected override void OnInitialized()
+    {
+        Person = new Person() { Name = "Joe", DateOfBirth = DateTime.Today, Biography = "something" };
+    }
+
+    private void Edit()
+    {
+        Console.WriteLine("Editing the person...");        
+    }
 }
