--- a/BlazorMovies/Client/Pages/Gernres/EditGenre.razor
+++ b/BlazorMovies/Client/Pages/Gernres/EditGenre.razor
@@ -2,7 +2,26 @@
 
 <h3>EditGenre</h3>
 
+@if (genre != null)
+{
+    <GenreForm Genre="genre" OnValidSubmit="Edit"/>
+}
+
 @code {
     [Parameter] public int GenreId { get; set; }
+    public Genre genre;
+
+    protected override void OnInitialized()
+    {
+        genre = new Genre() { Id = GenreId, Name = "Comedy" };
+    }
+
+    private void Edit()
+    {
+        Console.WriteLine("Edit Method");
+        Console.WriteLine($"Id = {genre.Id}");
+        Console.WriteLine($"Name = {genre.Name}");
+    }
+
 
 }
