--- a/BlazorMovies/Client/Shared/NavMenu.razor
+++ b/BlazorMovies/Client/Shared/NavMenu.razor
@@ -23,6 +23,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/movies/search">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Search Movies
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="genres">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Genres
             </NavLink>
@@ -37,7 +42,7 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Create a Movie
             </NavLink>
         </li>
-        
+
     </ul>
 </div>
 
