--- a/BlazorMovies/Client/Pages/Index.razor
+++ b/BlazorMovies/Client/Pages/Index.razor
@@ -6,6 +6,12 @@
     <h3>Movie</h3>
     <MoviesList Movies="movies" />
 </div>
+<CustomTypeahead SearchMethod="SearchMethod">
+    <ResultTemplate>
+        @context
+    </ResultTemplate>
+    </CustomTypeahead>
+
 
 
 @code{
@@ -15,5 +21,15 @@
     {
         //await Task.Delay(2000);
         movies = repository.GetMovies();
+    }
+
+    private async Task<IEnumerable<string>> SearchMethod(string searchText)
+    {
+        await Task.Delay(2000);
+        if (searchText == "test")
+        {
+            return Enumerable.Empty<string>();
+        }
+        return new List<string>() { "Joe", "Facenda" };
     }
 }
